--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,17 @@ footer p {
     margin: 0;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.grid-item img {
+    max-width: 100%;
+    height: auto;
+}
+
 
 #movingStuhl {
     position: absolute;
